# transcription-project.backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  transcription.txt
app/: __init__.py  main.py
app/api/: __init__.py  endpoints.py
app/core/: __init__.py  config.py
app/services/: transcription_service.py
app/utils/logging/: logger_config.py
logging/: LOGGING_README.md  example_usage.py  logger_config.py
