[project]
name = "transcript-recordings-backend"
version = "0.1.0"
description = "A FastAPI-based backend service for transcribing video recordings using ElevenLabs' speech-to-text API with speaker diarization support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.5.0",
    "fastapi[standard]>=0.115.14",
    "moviepy>=2.2.1",
    "python-dotenv>=1.1.1",
]
